# basic-rust-project

./: .gitignore  Cargo.toml
src/: data_extraction.rs  main.rs
src/feature_pipeline/: data_extraction.rs  preprocessing.rs
src/setup/: paths.rs
src/training_pipeline/: training.rs
