[package]
name = "basic-rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
gbdt = "0.1.3"
linfa = "0.7.0"
linfa-trees = "0.7.0"
log = "0.4.22"
ndarray = "0.16.1"
polars = { version = "0.44.2", features = ["csv"] }
rand = "0.8.5"
reqwest = {version = "0.12.9", features = ["blocking"]}
simple_logger = "5.0.0"
tokio = { version = "1.41.1", features = ["full"] }
